fix(FCSS): Add missing color light

--- a/packages/forma-36-fcss/scss/colors.scss
+++ b/packages/forma-36-fcss/scss/colors.scss
@@ -1,5 +1,5 @@
 $semantic-colors: primary positive negative warning;
-$text-colors: text-dark text-mid text-lightest;
+$text-colors: text-dark text-mid text-light text-lightest;
 $element-colors: element-darkest element-dark element-mid element-light
   element-lightest;
 $contast-colors: contrast-dark contrast-mid contrast-light;
